--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,9 +81,12 @@
 
     <Button
         android:id="@+id/avail_coupons"
-        android:layout_width="202dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:text="Button"
+        android:alpha="0.6"
+        android:focusedByDefault="true"
+        android:onClick="showAvailCoupons"
+        android:text="Available Coupons"
         app:layout_constraintBottom_toBottomOf="@+id/sceneform_fragment"
         app:layout_constraintEnd_toStartOf="@+id/my_coupons"
         app:layout_constraintHorizontal_bias="0.0"
@@ -93,9 +96,12 @@
 
     <Button
         android:id="@+id/my_coupons"
-        android:layout_width="202dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:text="Button"
+        android:alpha="0.6"
+        android:onClick="showMyCoupons"
+        android:text="My Coupons"
+        android:textIsSelectable="false"
         app:layout_constraintBottom_toBottomOf="@+id/sceneform_fragment"
         app:layout_constraintEnd_toEndOf="@+id/sceneform_fragment"
         app:layout_constraintTop_toBottomOf="@+id/in_thresh_button"
