--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,7 @@
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:alpha="0.6"
-        android:onClick="showMyCoupons"
+        android:onClick="showCollectedCoupons"
         android:text="My Coupons"
         android:textIsSelectable="false"
         app:layout_constraintBottom_toBottomOf="@+id/sceneform_fragment"
