--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:id="@+id/avail_coupons"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="473dp"
         android:alpha="0.6"
         android:focusedByDefault="true"
