--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="473dp"
+        android:layout_marginEnd="4dp"
         android:alpha="0.6"
         android:focusedByDefault="true"
         android:onClick="showAvailCoupons"
@@ -39,6 +40,7 @@
         android:id="@+id/my_coupons"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="473dp"
         android:layout_marginEnd="8dp"
         android:alpha="0.6"
@@ -47,6 +49,7 @@
         android:textIsSelectable="false"
         app:layout_constraintBottom_toBottomOf="@+id/sceneform_fragment"
         app:layout_constraintEnd_toEndOf="@+id/sceneform_fragment"
+        app:layout_constraintStart_toEndOf="@+id/avail_coupons"
         app:layout_constraintTop_toTopOf="@+id/sceneform_fragment"
         app:layout_constraintVertical_bias="0.195" />
 
