--- a/app/src/main/res/layout/row_coupon.xml
+++ b/app/src/main/res/layout/row_coupon.xml
@@ -17,7 +17,7 @@
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
-        android:id="@+id/firstName"
+        android:id="@+id/couponName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
